# mkasraoui_AIPartyPlaneGenerator

./: .env  .gitignore  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: deploy.yml
app/: config.py  main.py
app/api/v1/endpoints/: generate_aiMessage.py  generate_card.py  generate_party.py  recommendation.py  t_shirt_endpoint.py
app/schemas/: invite.py  schema.py
app/services/: generator.py  recommendation.py
app/services/party/: adventure_list.py  party.py
app/services/t_shirt/: shirt.py
app/utils/: helper.py  logger.py
test/: test_generate_full_party_json.py
